# pline-classifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  repositories.py  schemas.py
app/classifier/: catalog.py  prompt.py  service.py
app/classifier/providers/: anthropic_provider.py  base.py  openai_provider.py
app/routers/: classify.py  tracks.py
data/: entities.json  ground_truth.jsonl  holdout_eval.jsonl  mock_tracks.json  mock_youtube_cid.json
scripts/: eval.py  seed.py
